--- a/mana/index.html
+++ b/mana/index.html
@@ -13,6 +13,8 @@
     const trEle = "<tr></tr>";
     const tdEle = "<td></td>";
 
+    let checked = 1;
+
       $(document).ready(function(){
         $("#root2").hide();
 
@@ -91,7 +93,7 @@
         }
 
         let registForm = [
-          ["아이디", "<input type='text' name='userid' id='userid'/>"],
+          ["아이디", "<input type='text' name='userid' id='userid'/><a id='check'>중복확인</a>"],
           ["비밀번호", "<input type='password' name='passwd' id='passwd'/>"],
           ["비밀번호 확인", "<input type='password' name='checkPass' id='checkPass'/>"],
           ["이름", "<input type='text' name='name' id='name'/>"],
@@ -108,6 +110,31 @@
           }
         }
 
+      $('#check').click(function(){
+        let checkid = $('#userid').val();
+        if(checkid == ""){
+          alert('아이디를 입력해주세요!');
+          return false;
+        }
+
+        $.ajax({
+          url: 'check_id.php',
+          type: 'post',
+          dataType: 'json',
+          data: {userid:checkid},
+          success: function(data){
+            checked = data.cnt;
+            if(checked == 1){
+              alert('사용불가능한 아이디입니다.');
+              $('#userid').val("");
+              $('#userid').focus();
+              return false;
+            }
+            alert('사용가능한 아이디입니다.')
+          }
+        });
+      });
+
       //회원가입 유효성 체크 및 submit
       $("#registerBtn").click(function(){
         let userid = $('#userid').val();
@@ -122,6 +149,12 @@
         if(userid == ""){
           $('#userid').focus();
           alert("아이디를 입력해주세요");
+          return false;
+        }
+
+        if(checked == 1){
+          $('#userid').focus();
+          alert("아이디 중복체크를 해주세요!");
           return false;
         }
 
@@ -157,6 +190,8 @@
 
         //$("#registerForm").submit();
       });
+
+
       }
     </script>
   </head>
